force-app/main/default/objects/Availability_History__c/Availability_History__c.object-meta.xml
<CustomObject>
    <description>Logs executive availability changes</description>
    <label>Availability History</label>
    <nameField>
        <displayFormat>AH-{00000}</displayFormat>
        <label>Availability History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>