force-app/main/default/objects/Availability_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Changed Availability</relationshipLabel>
    <relationshipName>Changed_Availability</relationshipName>
    <type>Lookup</type>
</CustomField>