force-app/main/default/objects/Availability_History__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Log</label>
    <referenceTo>Daily_Log__c</referenceTo>
    <relationshipLabel>Availability Histories</relationshipLabel>
    <relationshipName>Availability_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>