force-app/main/default/objects/Availability_History__c/fields/Is_Logout__c.field-meta.xml
<CustomField>
    <fullName>Is_Logout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this record as a session logout/end marker. When true, time calculation stops at this record instead of continuing to current time.</description>
    <label>Is Logout</label>
    <type>Checkbox</type>
</CustomField>