force-app/main/default/objects/Availability_History__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <description>The shift the user was on when this availability change occurred</description>
    <label>Shift</label>
    <length>100</length>
    <type>Text</type>
</CustomField>