force-app/main/default/objects/Availability_History__c/fields/Unavailability_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unavailability_Reason__c</fullName>
    <label>Unavailability Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>