force-app/main/default/objects/Availability_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Availability History</relationshipLabel>
    <relationshipName>Availability_History</relationshipName>
    <type>Lookup</type>
</CustomField>