force-app/main/default/objects/Availability_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Daily_Log__c</columns>
    <columns>Is_Available__c</columns>
    <columns>Is_Logout__c</columns>
    <columns>Unavailability_Reason__c</columns>
    <columns>Shift__c</columns>
    <columns>Changed_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Changed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>